# PersonalStatus

./: .env.example  .gitignore  AppDetector.cpp  AppDetector.h  CMakeLists.txt  LICENSE.txt  OverlayWindow.cpp  README-HYPRLAND.md  README.md  ThoughtsManager.h  WebServer.cpp  WebServer.h  build-release.bat  build.bat  build.sh  main.cpp  package-release.bat  structure.txt.save
scripts/: build.sh  install-deps-arch.sh
src/: main.cpp
src/common/: AppDetector.cpp  AppDetector.h  AutoStart.cpp  AutoStart.h  OverlayWindow.cpp  OverlayWindow.h  SettingsManager.cpp  SettingsManager.h  SystemTray.cpp  SystemTray.h  ThoughtsManager.cpp  WebServer.cpp  WebServer.h  config.h
src/linux/: AppDetector_Linux.cpp  OverlayWindow_Wayland.cpp  OverlayWindow_Wayland.h  OverlayWindow_X11.cpp  OverlayWindow_X11.h  SetupDialog_Wayland.cpp  SetupDialog_Wayland.h  SystemTray_Linux.cpp  SystemTray_Linux.h
src/resources/: resources.h  resources.rc
src/windows/: OverlayWindow_Win32.cpp  OverlayWindow_Win32.h  SetupDialog_Win32.cpp  SetupDialog_Win32.h  SystemTray_Win32.cpp  SystemTray_Win32.h
